--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
+        google()
         jcenter()
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0-beta3'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.1"
+        classpath 'com.android.tools.build:gradle:3.6.3'
 
+        // 发布到GitPack上需要的依赖
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,15 +17,18 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
+
     }
 }
 
+
 ext {
-    compileSdkVersion = 22
-    buildToolsVersion = '22.0.1'
-    targetSdkVersion = 22
-    minSdkVersion = 16
+    compileSdkVersion = 29
+    buildToolsVersion = "29.0.3"
+    targetSdkVersion = 29
+    minSdkVersion = 19
     versionCode = 28
-    versionName = "0.3.2"
+    versionName = "1.3.2"
 }
